Agregar atributos a formulario de login

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-    <form action="">
+    <form action="" id="form-login">
         <h1>Iniciar Sesion</h1>
-        <input type="text" required>
-        <input type="password" required>
+        <input type="text" placeholder="Nombre Usuario" name="usuario" required>
+        <input type="password" placeholder="Password" name="password" required>
         <button type="submit">Enviar</button>
         <hr>
     </form>
