--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -20,4 +21,5 @@
         sint ipsam. Itaque nemo voluptas <br> doloremque fugit voluptate veritatis asperiores, <br>
         minus aliquam repellat exercitationem vel distinctio quidem sed laborum earum maiores.</p>
 </body>
+<script src="script.js"></script> 
 </html>
