--- a/index.html
+++ b/index.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="box-center">
+        <form action="" id="form-login">
+            <h1>Login</h1>
+            <input type="text" placeholder="Username" name="usuario" required>
+            <input type="password" placeholder="Password" name="password" required>
+            <button type="submit">Let me in.</button>
+        </form>
+    </div>
 
-    <form action="" id="form-login">
-        <h1>Iniciar Sesion</h1>
-        <input type="text" placeholder="Nombre Usuario" name="usuario" required>
-        <input type="password" placeholder="Password" name="password" required>
-        <button type="submit">Enviar</button>
-        <hr>
-    </form>
-
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero,
-        sint ipsam. Itaque nemo voluptas <br> doloremque fugit voluptate veritatis asperiores, <br>
-        minus aliquam repellat exercitationem vel distinctio quidem sed laborum earum maiores.</p>
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
